<resources>
    <string name="app_name">TacTic</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="defaultTheme">Default Theme</string>
    <string name="sun_n_sky">Sun N\' Sky</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="apply">Apply</string>
    <string name="add">Add</string>
    <string name="bluesTurn">Blue\'s turn!</string>
    <string name="redsTurn">Red\'s turn!</string>
    <string name="delete">Delete</string>
    <string name="scores">Scores</string>
    <string name="game_over">Game Over!</string>
    <string name="restart">Restart</string>
    <string name="menu">Menu</string>
    <string name="draw">Draw</string>
    <string name="offline">Offline</string>
    <string name="name">Name</string>
    <string name="r_u_sure_u_want_to_quit">Are you sure you want to quit?</string>
    <string name="ok">OK</string>
    <string name="online">Online</string>
    <string name="join">join</string>
    <string name="host">Host</string>
    <string name="vs">VS</string>
    <string name="host_match">Host match</string>
    <string name="lobby_s_name">Lobby\'s name</string>
    <string name="cancel">Cancel</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="reload">Reload</string>
    <string name="online_rooms">Online rooms</string>
    <string name="player_name">PlayerName</string>
    <string name="blue">Blue:</string>
    <string name="red">Red:</string>
    <string name="home">Home</string>
    <string name="rules">Rules</string>
    <string name="diduforget">Did you forget to type the name?</string>
    <string name="map_size">Map size</string>

    <string-array name="rules">
        <item>The object of the game is to occupy your opponent\'s base</item>
        <item>In the first round, players choose the location of the base</item>
        <item>One of three actions can be performed in a round</item>
        <item>1) Occupy an empty cell</item>
        <item>2) Attack the opponent</item>
        <item>3) Increase the value of one your cells</item>
        <item>Occupy an empty cell: Only adjacent cells can be occupied</item>
        <item>Attack the opponent: Only an adjacent field can be attacked, and only a field with no greater value. After an attack, the difference between the two cells will be the value of the occupied field. The value of your own cell also decreases.</item>
        <item>The max value of the cells is 6</item>
        <item>The opponent\'s base can only be occupied from an adjacent cell with a value of at least 2.</item>
        <item>Have fun!</item>
    </string-array>



</resources>