<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.TacTic"
    android:layout_margin="60dp">

    <LinearLayout
        android:id="@+id/llWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/Theme.TacTic"
        app:layout_constraintTop_toBottomOf="@+id/tvWinner">


        <TextView
            android:id="@+id/tvWinnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Winner"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvWinnerScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/Theme.TacTic"
        app:layout_constraintTop_toBottomOf="@+id/llWinner">

        <TextView
            android:id="@+id/tvLooserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Looser"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvLooserScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRestart"
        android:theme="@style/Theme.TacTic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llLooser" />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRestart" />

</androidx.constraintlayout.widget.ConstraintLayout>